# flight-delay-prediction

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
challenge/: api.py  exploration.ipynb  model.py
docs/: challenge.md
tests/api/: test_api.py
