[project]
name = "flight-delay-prediction"
version = "0.1.0"
description = "A machine learning project that analyzes historical flight data to predict flight delays."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
